--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,7 +32,7 @@
                     android:id="@+id/data_container"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
+                    android:gravity="center_vertical"
                     android:orientation="vertical">
 
                     <TextView
@@ -58,14 +58,8 @@
                         android:padding="16dp"
                         android:text="Humidity is -"
                         android:textSize="30sp" />
-
-
                 </LinearLayout>
-
-
             </FrameLayout>
-
-
         </LinearLayout>
 
         <TextView
@@ -73,7 +67,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Click + to add a city" />
+            android:text="Click + to add a city"
+            android:textSize="25sp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/add_button"
