--- a/app/src/main/res/layout/activity_my_cities.xml
+++ b/app/src/main/res/layout/activity_my_cities.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -14,6 +14,8 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/my_cities_toolbar"
                 android:layout_width="match_parent"
+                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary" />
 
